--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_USER=cdacadmin
-DB_PW=cdacadmin 
+DB_USER=blogdatabase
+DB_PW=AWFjIKgceElMgnpo 
 SECRETKEY=HJHGDHSHGSDKGFQHGJ
 EMAIL=krishnakumar10102000@outlook.com
 PASSWORD=Krishna@2000
 PORT=8000
-MongoURL = `mongodb+srv://cdacadmin:cdacadmin@cluster0.c7mcrqe.mongodb.net/?retryWrites=true&w=majority`
+MongoURL = `mongodb+srv://blogdatabase:AWFjIKgceElMgnpo@cluster0.zyuhi.mongodb.net/?retryWrites=true&w=majority`
